--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "vue-quill-editor": "^3.0.6"
+  },
+  "devDependencies": {
+    "sass": "^1.34.1"
   }
 }
