--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.9.1",
+    "moment": "^2.29.1",
     "nuxt": "^2.15.3",
     "vue-quill-editor": "^3.0.6"
   },
